<resources>

    <string name="app_id">582844509072</string>
    <string name="app_name">Francois</string>
    <string name="play">Play</string>
    <string name="play_again">Play Again</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="achievements">Achievements</string>
    <string name="leaderboard_title">Choose Leaderboard to View</string>
    <string name ="rate">Rate</string>
    <string name="game_over">Game Over </string>
    
    <string name="score">Score:</string>
    <string name="high_score">Highscore:</string>
    <string name="last_score">Last Score</string>
    
    <string name="score_option">Scores</string>
    <string name="time_option">Time Survived</string>
    
    <string name="score_leaderboard">CgkIkNf1ofsQEAIQAQ</string>
    <string name="time_leaderboard">CgkIkNf1ofsQEAIQAg</string>
    
    <string name="warming_up_achievement">CgkIkNf1ofsQEAIQBA</string>
    <string name="natural_achievement">CgkIkNf1ofsQEAIQBQ</string>
    <string name="novice_evader_achievement">CgkIkNf1ofsQEAIQBg</string>
    <string name="evader_achievement">CgkIkNf1ofsQEAIQBw</string>
    <string name="score_means_nothing_achievement">CgkIkNf1ofsQEAIQCA</string>
    <string name="beat_mike_achievement">CgkIkNf1ofsQEAIQCQ</string>
    <string name="loser_achievement">CgkIkNf1ofsQEAIQCg</string>
    <string name="give_up_achievement">CgkIkNf1ofsQEAIQCw</string>
    <string name="my_hero_achievement">CgkIkNf1ofsQEAIQDA</string>
    <string name="how_did_you_do_that_achievement">CgkIkNf1ofsQEAIQDg</string>
    
    <string name="add_id">ca-app-pub-6066342211060091/8064908168</string>

</resources>
