<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:orientation="vertical"
    tools:context=".MainScreenActivity" >

    <TextView
        android:id="@+id/highscoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/highscoreText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/highscoreText"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/playButton"
        style="@style/ButtonText"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_above="@+id/leaderboardsButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bluebutton"
        android:gravity="center"
        android:text="@string/play" />

    <TextView
        android:id="@+id/highscoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastScoreValue"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/high_score"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lastScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/highscoreText"
        android:layout_alignLeft="@+id/lastScoreText"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lastScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastScoreValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/last_score"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/lastScoreText"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="12dp"
        android:background="#F7F7F7"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="35sp" />

    <Button
        android:id="@+id/leaderboardsButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_above="@+id/achievementsButton"
        android:layout_alignLeft="@+id/playButton"
        android:background="#F7F7F7"
        android:gravity="center"
        android:text="@string/leaderboard"
        android:textColor="@drawable/hovercolour" />

    <Button
        android:id="@+id/achievementsButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/leaderboardsButton"
        android:layout_above="@+id/rateButton"
        android:background="#F7F7F7"
        android:gravity="center"
        android:text="@string/achievements"
        android:textColor="@drawable/hovercolour" />

    <Button
        android:id="@+id/rateButton"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/achievementsButton"
        android:layout_alignParentBottom="true"
        android:background="#F7F7F7"
        android:gravity="center"
        android:text="@string/rate"
        android:textColor="@drawable/hovercolour" />

</RelativeLayout>